Fix image distortion

--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -45,9 +45,12 @@
     max-height: 50%;
     img {
       width: 100%;
+      transition: filter 0.3s;
+    }
+
+    .imgSizeLimiter {
       height: 100%;
       object-fit: cover;
-      transition: filter 0.3s;
     }
   }
   h3 {
